<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.learnerslab.e_register.AddStudentsActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#ffffff"
        android:elevation="5dp"
        android:orientation="vertical"
        android:padding="20dp">

        <TextView
            android:id="@+id/selectSub"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/select_subject" />

        <Spinner
            android:id="@+id/subList"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:contentDescription="@string/select_subject"
            android:paddingBottom="5dp"
            android:textAlignment="center"
            android:textSize="20sp" />
        <EditText
            android:id="@+id/edit_name"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:hint="@string/name"
            android:paddingBottom="5dp"
            android:textSize="20sp"
            android:singleLine="true"/>

        <EditText
            android:id="@+id/roll"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:hint="@string/roll_number"
            android:inputType="numberDecimal"
            android:paddingBottom="5dp"
            android:textSize="20sp"
            android:singleLine="true"/>

        <EditText
            android:id="@+id/register"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:hint="@string/admission_number"
            android:paddingBottom="5dp"
            android:textSize="20sp"
            android:singleLine="true"/>

        <EditText
            android:id="@+id/contact"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:hint="@string/contact"
            android:inputType="phone"
            android:paddingBottom="5dp"
            android:textSize="20sp"
            android:singleLine="true"/>

        <Button
            android:id="@+id/btnSave"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="50dp"
            android:background="@drawable/rounded_button"
            android:text="@string/save"
            android:textColor="#ffffff"
            android:textSize="16sp"
            android:textStyle="bold"
            />
    </LinearLayout>
</RelativeLayout>
