<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/coordinatorLayout"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.learnerslab.e_register.MarkAttendanceActivity">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#ffffff"
        android:elevation="5dp"
        android:orientation="vertical"
        android:padding="5dp">


        <TextView
            android:id="@+id/data"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/not_found" />
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingTop="10dp"
            android:paddingBottom="10dp">
        <EditText
                android:id="@+id/atterno"
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:hint="@string/roll_number"
                android:inputType="number"
                android:singleLine="true" />

            <Button
                android:id="@+id/btnmarkabsent"
                android:layout_width="150dp"
                android:layout_height="40dp"
                android:background="@drawable/rounded_button"
                android:text="@string/mark_absent"
                android:elevation="5dp"
                android:layout_gravity="center_horizontal"
                android:textSize="16sp"
                android:textStyle="bold"
                android:textColor="#ffffff" />
    </LinearLayout>

        <TextView

            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/absent_students" />

        <ListView
            android:id="@+id/markAttendanceListView"
            android:layout_width="match_parent"
            android:layout_height="275dp"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_marginTop="10dp"
            android:elevation="5dp"/>

        <Button
            android:id="@+id/btnSave"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="25dp"
            android:elevation="5dp"
            android:background="@drawable/rounded_button"
            android:text="@string/done"
            android:textColor="#ffffff"
            android:textSize="16sp"
            android:textStyle="bold" />
    </LinearLayout>
</android.support.design.widget.CoordinatorLayout>
